# network-quality

./: .python-version  README.md  pyproject.toml
exercise1/: roc.py  sampling.py
exercise2/: adoption-rejection-method.py  anomaly-deteciton.py  box-muller.py  cumulative-sum-for-change-point-detection.py  pca-for-anomaly-deteciton.py  sampling-with-multivariate-norm.py
exercise3/: delay-point-detection.py  delay.csv
